# ihatemoney

./: .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTORS  CONTRIBUTORS.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  SECURITY.md  TODO  app.py  budget.py  dev-requirements.txt  docker-compose.test.yml  docker-compose.yml  fabfile.py  hatch_build.py  ihatemoney.db  ihatemoney.sqlite  ihatemoney.wsgi  manage.py  models.py  pyproject.toml  pytest.ini  requirements.txt  settings.cfg  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: check-doc.yml  ci.yml  dockerhub.yml  lint-and-tests.yml  lint-docs.yml  python-package.yml  release.yml  test-docs.yml  unit-tests.yml
For/: pyvenv.cfg
Software/: pyvenv.cfg
Source/: pyvenv.cfg
Strategy/: pyvenv.cfg
budget/: api.py  budget.py  default_settings.py  epio.ini  flaskext_compat.py  forms.py  manage.py  merged_settings.py  messages.pot  models.py  requirements.txt  rest.py  run.py  settings_epio.py  tests.py  utils.py  web.py
budget/migrations/: env.py
budget/migrations/versions/: 26d6a218c329_.py  b9a10d5d63ce_.py
budget/static/: bootstrap-1.0.0.min.css  main.css
budget/static/awesome/: awesome-buttons.css
budget/static/css/: bootstrap.min.css  jquery-ui.css  jquery.qtip.min.css  main.css
budget/static/ihatemoney/: custom.js
budget/static/js/: jquery-ui.js  jquery.qtip.min.js
budget/static/js/i18n/: jquery.ui.datepicker-fr.js
budget/static/uniform/: blue.uni-form.css
budget/templates/: add_bill.html  add_member.html  admin.html  authenticate.html  bill_form.html  compute_bills.html  create_archive.html  create_project.html  dashboard.html  display_errors.html  edit_bill.html  edit_project.html  forms.html  home.html  invitation_mail  invitation_mail.en  invitation_mail.fr  layout.html  list_bills.html  member_form.html  password_reminder.en  password_reminder.fr  password_reminder.html  recent_projects.html  reminder_mail  reminder_mail.fr  send_invites.html  settle_bill.html  settle_bills.html  sidebar_table_layout.html
budget/tests/: ihatemoney_envvar.cfg  tests.py
budget/translations/fr/LC_MESSAGES/: messages.mo  messages.po
conf/: apache-vhost.conf  confandrun.sh  entrypoint.sh  gunicorn.conf.py  ihatemoney.service  nginx.conf  supervisord.conf
docs/: Makefile  api.md  api.rst  conf.py  configuration.md  configuration.rst  contributing.md  contributing.rst  index.rst  installation.md  installation.rst  make.bat  openapi.yaml  requirements.txt  security.md  security.rst  upgrade.md  upgrade.rst
docs/_themes/pelican/static/: pelican.css_t
ihatemoney/: .travis.yml  api.py  babel.cfg  babel_utils.py  currency_convertor.py  default_settings.py  emails.py  forms.py  history.py  ihatemoney.cfg  manage.py  messages.pot  models.py  momentjs.py  monkeypath_continuum.py  patch_sqlalchemy_continuum.py  pyvenv.cfg  run.py  utils.py  versioning.py  web.py  wsgi.py
ihatemoney/api/: common.py
ihatemoney/api/v1/: __init__.py  resources.py
ihatemoney/conf-templates/: apache-vhost.conf.j2  ihatemoney.cfg.j2  supervisord.conf.j2
ihatemoney/migrations/: env.py  utils.py
ihatemoney/migrations/versions/: 06884b17c50f_fix_password_hash_length.py  2dcb0c0048dc_autologger.py  321d3f042213_added_tag_column_to_bill_model.py  3263a8f198b0_add_bill_type_into_bill_version.py  3334e1f293b4_remove_currencies.py  49fc258cebf5_added_tag_column_to_bill_model.py  52903c4b2459_.py  5cdb4f2e52c9_add_default_currency.py  6c6fb2b7f229_.py  7a9b38559992_new_bill_type_attribute_added.py  927ed575acbd_add_currencies.py  a4902907d273_new_start_date_end_date.py  a67119aa3ee5_migrate_negative_weights.py  afbf27e6ef20_add_bill_import_date_field.py  b78f8a8bdb16_hash_project_passwords.py  b9a10d5d63ce_.py  c2f4e8a1b9d7_add_project_theme.py  c941aaca38c2_remove_ip_recording.py  cb038f79982e_sqlite_autoincrement.py  d53fe61e5521_add_a_tags_table.py  df95884d26ae_.py  e782dd493cdc_add_original_currency_and_amount.py  f629c8ef4ab0_initialize_all_members_weights_to_1.py
ihatemoney/static/css/: 2026.css  bootstrap.min.css  chatbox_styles.css  chatbox_typing.css  datatables.min.css  main.css  tagsinput.css
ihatemoney/static/fonts/: OFL.txt  comfortaa-regular-webfont.eot  fontfaces.css
ihatemoney/static/js/: chart.min.js  charts.js  chatbox_app.js  chatbox_chat.js  graphs.js  ihatemoney.js
ihatemoney/static/js/locales/: bootstrap-datepicker.fr.min.js
ihatemoney/templates/: 404.html  add_bill.html  admin.html  authenticate.html  chat_window.html  dashboard.html  display_errors.html  display_message.html  download_mobile_app.html  edit_member.html  edit_project.html  forms.html  history.html  home.html  inv.j2  invitation_mail.en  invitation_mail.en.j2  invitation_mail.fr  invitation_mail.fr.j2  invitation_mail.j2  layout.html  list_bills.html  list_bills_archived.html  list_bills_post_delete.html  password_reminder.en  password_reminder.en.j2  password_reminder.fr.j2  password_reminder.j2  password_reminder_sent.html  project_feed.xml  reminder_mail.en  reminder_mail.en.j2  reminder_mail.fr  reminder_mail.fr.j2  reminder_mail.j2  send_invites.html  settle_bills.html  showcase.html  sidebar_table_layout.html  statistics.html  (+2 more)
ihatemoney/tests/: api_test.py  budget_test.py  conftest.py  filterbydate_test.py  history_test.py  ihatemoney.cfg  ihatemoney_envvar.cfg  import_test.py  main_test.py  tests.py
ihatemoney/tests/common/: help_functions.py  ihatemoney_testcase.py
ihatemoney/translations/az/LC_MESSAGES/: messages.po
ihatemoney/translations/bn/LC_MESSAGES/: messages.mo  messages.po
ihatemoney/translations/bn_BD/LC_MESSAGES/: messages.mo  messages.po
ihatemoney/translations/br/LC_MESSAGES/: messages.po
ihatemoney/translations/ca/LC_MESSAGES/: messages.mo  messages.po
ihatemoney/translations/cs/LC_MESSAGES/: messages.mo  messages.po
ihatemoney/translations/da/LC_MESSAGES/: messages.po
static/: awesome.css  main.css
templates/: compute_bills.html  layout.html
(+67 files in other folders)
