[metadata]
name = ihatemoney
version = 5.dev0
url = https://github.com/spiral-project/ihatemoney
description = A simple shared budget manager web application.
long_description = file: README.rst, CHANGELOG.rst
author = Alexis Métaireau & contributors
author_email= alexis@notmyidea.org
keywords = web, budget
license = Custom BSD Beerware
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    blinker==1.4
    debts==0.5
    email_validator==1.0.5
    Flask-Babel==1.0.0
    Flask-Cors==3.0.8
    Flask-Mail==0.9.1
    Flask-Migrate==2.5.3
    Flask-RESTful==0.3.8
    Flask-Script==2.0.6
    Flask-SQLAlchemy==2.4.1
    Flask-WTF==0.14.3
    Flask==1.1.2
    itsdangerous==1.1.0
    Jinja2==2.11.2
    SQLAlchemy-Continuum==1.3.9

[options.extras_require]
dev =
    black==19.10b0
    flake8==3.7.9
    Flask-Testing==0.8.0
    pytest==5.4.1
    tox==3.14.6
    zest.releaser==6.20.1

[options.entry_points]
console_scripts =
    ihatemoney = ihatemoney.manage:main

paste.app_factory =
    main = ihatemoney.run:main
