[metadata]
name = ihatemoney
version = 5.2.0
url = https://github.com/spiral-project/ihatemoney
description = A simple shared budget manager web application.
long_description = file: README.rst, CHANGELOG.rst
author = Alexis Métaireau & contributors
author_email= alexis@notmyidea.org
keywords = web, budget
license = Custom BSD Beerware
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    blinker>=1.4,<2
    cachetools>=4.1,<5
    debts>=0.5,<1
    email_validator>=1.0,<2
    Flask-Babel>=1.0,<3
    Flask-Cors>=3.0.8,<4
    Flask-Mail>=0.9.1,<1
    Flask-Migrate>=2.5.3,<4  # Not following semantic versioning (e.g. https://github.com/miguelgrinberg/flask-migrate/commit/1af28ba273de6c88544623b8dc02dd539340294b)
    Flask-RESTful>=0.3.9,<1
    Flask-SQLAlchemy>=2.4,<3
    Flask-Talisman>=0.8,<2
    Flask-WTF>=0.14.3,<2
    WTForms>=2.3.1,<3.1
    Flask>=2,<3
    itsdangerous>=2,<3
    Jinja2>=3,<4
    requests>=2.22,<3
    SQLAlchemy-Continuum>=1.3.12,<2
    SQLAlchemy>=1.3.0,<1.4  # New 1.4 changes API, see #728
    python-dateutil

[options.extras_require]
database =
    psycopg2-binary>=2.9,<3
    PyMySQL>=0.9,<1.1

dev =
    black>=19.10b0 ; python_version >= '3.6'
    flake8>=3.7.9
    Flask-Testing>=0.8.1
    isort>=5.0.0
    pytest>=6.2.5
    tox>=3.14.6
    zest.releaser>=6.20.1
    vermin

doc =
    Sphinx==4.4.0
    docutils==0.17.1
    myst-parser

[options.entry_points]
flask.commands =
    generate_password_hash = ihatemoney.manage:password_hash
    generate-config = ihatemoney.manage:generate_config

console_scripts =
    ihatemoney = ihatemoney.manage:cli

paste.app_factory =
    main = ihatemoney.run:main
